[package]
name = "clytia"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A crate to make writing CLIs a bit nicer, a set of functions for common components"
documentation = "https://docs.rs/clytia"
readme = "README.md"
homepage = "https://github.com/makepress/clytia/"
repository = "https://github.com/makepress/clytia/"
keywords = ["cli", "helper", "command-line"]
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
crossbeam = "0.8.2"
owo-colors = "3.5.0"
termion = "1.5.6"
thiserror = "1.0.34"
